--- a/README.org
+++ b/README.org
@@ -6,7 +6,7 @@ We’ve created the =amarcord.amici= Python package containing functions to acce
 To start using =amarcord.amici=, you can use the following =pip= command:
 
 #+begin_example
-pip install --upgrade --index-url https://maxwell-token:JUX_f_ivQjyZbxZAEPYi@gitlab.desy.de/api/v4/projects/370/packages/pypi/simple --no-deps amarcord-amici
+pip install --upgrade --extra-index-url https://maxwell-token:JUX_f_ivQjyZbxZAEPYi@gitlab.desy.de/api/v4/projects/370/packages/pypi/simple amarcord-amici
 #+end_example
 
 Note that this uses a generated token called =maxwell-token= to access the GitLab Python package registry. Two notes on that:
